RESOLVED FIXED303254
[threaded-animations] WPT test scroll-animations/css/animation-timeline-view-functional-notation.tentative.html crashes with "Threaded Scroll-driven Animations" enabled
https://bugs.webkit.org/show_bug.cgi?id=303254
Summary [threaded-animations] WPT test scroll-animations/css/animation-timeline-view-...
Antoine Quint
Reported 2025-11-29 04:33:08 PST
The following command crashes the web process: rwt --debug imported/w3c/web-platform-tests/scroll-animations/css/animation-timeline-view-functional-notation.tentative.html --iterations 100 --experimental-feature ThreadedScrollDrivenAnimationsEnabled=true We crash under `KeyframeEffect::addPendingAcceleratedAction()` calling into `animation()->acceleratedStateDidChange()` when the animation is null.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-29 04:34:59 PST
Antoine Quint
Comment 2 2025-11-29 04:37:10 PST
EWS
Comment 3 2025-11-29 15:35:36 PST
Committed 303646@main (3ab5e9cc13fe): <https://commits.webkit.org/303646@main> Reviewed commits have been landed. Closing PR #54574 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.